--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vitest": "3.0.4"
   },
   "dependencies": {
+    "@fastify/jwt": "9.0.3",
     "@prisma/client": "6.2.1",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.13",
