--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "node build/server.js",
     "build": "tsup src -d build",
     "eslint": "eslint --ext .ts src --fix",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:e2e": "vitest run --dir src/http",
+    "pretest:e2e": "run-s test:create-prisma-environment test:isntall-prisma-environment",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:isntall-prisma-environment": "npm link vitest-environment-prisma"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +36,7 @@
     "@vitest/coverage-v8": "3.0.4",
     "@vitest/ui": "3.0.4",
     "eslint": "8.57.1",
+    "npm-run-all": "4.1.5",
     "prisma": "6.2.1",
     "tsup": "8.3.6",
     "tsx": "4.19.2",
