--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "pretest:e2e": "run-s test:create-prisma-environment test:isntall-prisma-environment",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:isntall-prisma-environment": "npm link vitest-environment-prisma"
@@ -33,11 +34,13 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.10.10",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "3.0.4",
     "@vitest/ui": "3.0.4",
     "eslint": "8.57.1",
     "npm-run-all": "4.1.5",
     "prisma": "6.2.1",
+    "supertest": "7.0.0",
     "tsup": "8.3.6",
     "tsx": "4.19.2",
     "typescript": "5.7.3",
