--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ NODE_ENV=dev
 JWT_SECRET=asdfasdfadsf
 
 # Database
-DATABASE_URL="postgresql://docker:docker@localhost:5432/ignitenode03?schema=public"
+DATABASE_URL="postgresql://docker:docker@localhost:5432/node-solid?schema=public"
